--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 
+/* Setting fonts, text color and section size for main body sections of the webpage*/
+
 body {
     font-family: 'Libre Franklin', sans-serif;
 }
@@ -8,6 +10,30 @@ body {
     color: #152951;
   }
 
+.section {
+    height:80vh;
+    width: 100vw;
+    padding: 25px;
+    margin: 20px;
+}
+
+.section h2 {
+
+}
+
+  .section p {
+
+  }
+
+.section_content {
+    
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 110%;
+}
+
+
+/* Jumbotron specific formatting */
+  
 .jumbotron {
     background: url("pics/tear-out_1.jpg") no-repeat center center;
     background-size: cover;
@@ -15,63 +41,32 @@ body {
     font-weight: bold;
   }
 
-  #jumbotron_content {
-      margin-top: 120px;
-  }
+#jumbotron_content {
+    margin-top: 120px;
+}
 
-  .jumbotron p {
-      font-size: 120%;
-  }
+.jumbotron p {
+    font-size: 120%;
+}
 
-  .button {
-      background-color: #152951;
-      border-color: #152951;
-  }
-
-  .button:hover {
-      background-color: #00e6e6;
-      border-color: #00e6e6;
-      color: #152951;
-  }
-
-  .navbar .logo {
-    font-size: 200%;
-    color: #152951;
-  }
-
-  .jumbotron .logo {
+.jumbotron .logo {
     font-size: 250%;
-  }
-
-  #contact a {
-      font-size: 120%;
-      color: #152951;
-  }
-
-  #contact a:hover {
-      color: #00e6e6;
-  }
-
-
-  .section h2 {
-    margin-left: 25px;
-    margin-right: 25px;
-    margin-top: 50px;
-    margin-bottom: 40px;
 }
 
-  .section p {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
+/* ------------------------------------------------------------------------------------------ */
+
+
+/* Re-useable elements/class styles */
+
+.button {
+    background-color: #152951;
+    border-color: #152951;
 }
 
-.section_content {
-    padding-top: 70px;
-    padding-left: 30px;
-    padding-right: 30px;
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 110%;
+.button:hover {
+    background-color: #00e6e6;
+    border-color: #00e6e6;
+    color: #152951;
 }
 
 .has_border {
@@ -81,19 +76,39 @@ body {
     width: 45vw;
 }
 
-
-#business {
-    height:90vh;
-    width: 100vw;
+.bold {
+    font-weight: bold;
 }
+
+/* ------------------------------------------------------------------------------------------ */
+
+/* Navbar specific formatting */
+
+.navbar .logo {
+    font-size: 200%;
+    color: #152951;
+}
+
+#contact a {
+    font-size: 120%;
+    color: #152951;
+}
+
+#contact a:hover {
+    color: #00e6e6;
+}
+
+/* ------------------------------------------------------------------------------------------ */
+
+/* Additional formatting */
 
 #business .has_border {
     float: left;
 }
 
 #business img {
-    width: 45vw;
     float: right;
+    width: 45vw;
     margin-right: 20px;
 }
 
@@ -101,31 +116,16 @@ body {
     margin: 15px;
 }
 
-#services_consultation {
-    height:100vh;
-    width: 100vw;
-}
-
-
-#help_center {
-    height:100vh;
-    width: 100vw;
-}
-
 #our_team {
-    height:100vh;
-    width: 100vw;
+    margin-top: 20px;
     text-align: center;
-    font-family: 'PT Sans Narrow', sans-serif;
 }
 
 #our_team .card {
     margin: auto;
 }
 
-.bold {
-    font-weight: bold;
-}
+
 
 
 
