created quote page

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ html, body {
 
 
 
-#contact_form {
+.contact_form {
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 120%;
     color: #152951;
@@ -170,27 +170,28 @@ html, body {
     border-radius: 5px;
 }
 
-#contact_form .logo {
+.contact_form .logo {
     font-size: 170%
 }
 
-#contact_form .input {
+.contact_form .input {
     margin: 10px;
     border: none;
     border-bottom: 1px solid #152951;
     outline: none;
 }
 
-#contact_form textarea {
+.contact_form textarea {
     min-height: 120px;
 }
 
-#contact_form .button {
+.contact_form .button {
         background-color: #152951;
         border-color: #152951;
+        margin: 10px;
 }
 
-#contact_form .button:hover {
+.contact_form .button:hover {
     background-color: #00e6e6;
     border-color: #00e6e6;
     color: #152951;
